Created a transaction component and service. Working on the front-end

--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,8 @@
               "browserTarget": "TransTracker:build:production"
             },
             "development": {
-              "browserTarget": "TransTracker:build:development"
+              "browserTarget": "TransTracker:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
